--- a/MACRO2/app/src/main/res/values/strings.xml
+++ b/MACRO2/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">MACRO</string>
+    <string name="app_name">Macro Admin</string>
     <string name="title_activity_employee_list">EmployeeList</string>
 
     <!-- TODO: Remove or change this placeholder text -->
